.ci-out_end2end_glue_and_smoke.txt
[glue-fixed] zz-scripts/chapter07/plot_fig04_dcs2_vs_k.py
[glue-fixed] zz-scripts/chapter07/launch_scalar_perturbations_solver.py
[glue-fixed] zz-scripts/chapter07/plot_fig03_invariant_I1.py
[glue-fixed] zz-scripts/chapter07/plot_fig02_delta_phi_heatmap.py
[glue-fixed] zz-scripts/chapter07/plot_fig05_ddelta_phi_vs_k.py
[glue-fixed] zz-scripts/chapter07/plot_fig06_comparison.py
[glue-fixed] zz-scripts/chapter07/plot_fig07_invariant_I2.py
[glue-fixed] zz-scripts/chapter07/plot_fig01_cs2_heatmap.py
[glue-fixed] zz-scripts/chapter07/generate_data_chapter07.py
[glue-fixed] zz-scripts/chapter10/add_phi_at_fpeak.py
[glue-fixed] zz-scripts/chapter10/bootstrap_topk_p95.py
[glue-fixed] zz-scripts/chapter10/plot_fig07_synthesis.py
[glue-fixed] zz-scripts/chapter10/generate_data_chapter10.py
[glue-fixed] zz-scripts/chapter10/plot_fig02_scatter_phi_at_fpeak.py
[glue-fixed] zz-scripts/chapter10/eval_primary_metrics_20_300.py
[glue-fixed] zz-scripts/chapter10/plot_fig06_residual_map.py
[glue-fixed] zz-scripts/chapter10/check_metrics_consistency.py
[glue-fixed] zz-scripts/chapter10/plot_fig03_convergence_p95_vs_n.py
[glue-fixed] zz-scripts/chapter10/diag_phi_fpeak.py
[glue-fixed] zz-scripts/chapter10/plot_fig04_scatter_p95_recalc_vs_orig.py
[glue-fixed] zz-scripts/chapter10/recompute_p95_circular.py
[glue-fixed] zz-scripts/chapter10/inspect_topk_residuals.py
[glue-fixed] zz-scripts/chapter10/plot_fig05_hist_cdf_metrics.py
[glue-fixed] zz-scripts/chapter10/update_manifest_with_hashes.py
[glue-fixed] zz-scripts/chapter10/plot_fig03b_bootstrap_coverage_vs_n.py
[glue-fixed] zz-scripts/chapter10/regen_fig05_using_circp95.py
[glue-fixed] zz-scripts/chapter10/plot_fig01_iso_p95_maps.py
[glue-fixed] zz-scripts/chapter10/qc_wrapped_vs_unwrapped.py
[glue-fixed] zz-scripts/chapter06/generate_pdot_plateau_vs_z.py
[glue-fixed] zz-scripts/chapter06/plot_fig04_delta_rs_vs_params.py
[glue-fixed] zz-scripts/chapter06/plot_fig01_cmb_dataflow_diagram.py
[glue-fixed] zz-scripts/chapter06/plot_fig05_delta_chi2_heatmap.py
[glue-fixed] zz-scripts/chapter06/plot_fig03_delta_cls_relative.py
[glue-fixed] zz-scripts/chapter06/generate_data_chapter06.py
[glue-fixed] zz-scripts/chapter06/plot_fig02_cls_lcdm_vs_mcgt.py
[glue-fixed] zz-scripts/chapter09/opt_poly_rebranch.py
[glue-fixed] zz-scripts/chapter09/fetch_gwtc3_confident.py
[glue-fixed] zz-scripts/chapter09/plot_fig03_hist_absdphi_20_300.py
[glue-fixed] zz-scripts/chapter09/check_p95_methods.py
[glue-fixed] zz-scripts/chapter09/plot_fig01_phase_overlay.py
[glue-fixed] zz-scripts/chapter09/apply_poly_unwrap_rebranch.py
[glue-fixed] zz-scripts/chapter09/flag_jalons.py
[glue-fixed] zz-scripts/chapter09/generate_mcgt_raw_phase.py
[glue-fixed] zz-scripts/chapter09/plot_fig02_residual_phase.py
[glue-fixed] zz-scripts/chapter09/plot_fig05_scatter_phi_at_fpeak.py
[glue-fixed] zz-scripts/chapter09/plot_fig04_absdphi_milestones_vs_f.py
[glue-fixed] zz-scripts/chapter09/extract_phenom_phase.py
[glue-fixed] zz-scripts/chapter09/generate_data_chapter09.py
[glue-fixed] zz-scripts/chapter03/plot_fig06_grid_quality.py
[glue-fixed] zz-scripts/chapter03/plot_fig05_interpolated_milestones.py
[glue-fixed] zz-scripts/chapter03/plot_fig07_ricci_fR_vs_z.py
[glue-fixed] zz-scripts/chapter03/plot_fig01_fR_stability_domain.py
[glue-fixed] zz-scripts/chapter03/generate_data_chapter03.py
[glue-fixed] zz-scripts/chapter03/plot_fig03_ms2_R0_vs_f.py
[glue-fixed] zz-scripts/chapter03/plot_fig02_fR_fRR_vs_f.py
[glue-fixed] zz-scripts/chapter03/plot_fig08_ricci_fR_vs_T.py
[glue-fixed] zz-scripts/chapter03/plot_fig04_fR_fRR_vs_f.py
[glue-fixed] zz-scripts/chapter05/plot_fig04_chi2_vs_T.py
[glue-fixed] zz-scripts/chapter05/generate_data_chapter05.py
[glue-fixed] zz-scripts/chapter05/plot_fig02_dh_model_vs_obs.py
[glue-fixed] zz-scripts/chapter05/plot_fig01_bbn_reaction_network.py
[glue-fixed] zz-scripts/chapter05/plot_fig03_yp_model_vs_obs.py
[glue-fixed] zz-scripts/chapter02/plot_fig05_FG_series.py
[glue-fixed] zz-scripts/chapter02/plot_fig03_relative_errors.py
[glue-fixed] zz-scripts/chapter02/plot_fig02_calibration.py
[glue-fixed] zz-scripts/chapter02/plot_fig00_spectrum.py
[glue-fixed] zz-scripts/chapter02/plot_fig06_alpha_fit.py
[glue-fixed] zz-scripts/chapter02/primordial_spectrum.py
[glue-fixed] zz-scripts/chapter02/plot_fig01_P_vs_T_evolution.py
[glue-fixed] zz-scripts/chapter02/generate_data_chapter02.py
[glue-fixed] zz-scripts/chapter02/plot_fig04_pipeline_diagram.py
[glue-fixed] zz-scripts/chapter01/plot_fig05_I1_vs_T.py
[glue-fixed] zz-scripts/chapter01/plot_fig06_P_derivative_comparison.py
[glue-fixed] zz-scripts/chapter01/plot_fig03_relative_error_timeline.py
[glue-fixed] zz-scripts/chapter01/plot_fig04_P_vs_T_evolution.py
[glue-fixed] zz-scripts/chapter01/plot_fig02_logistic_calibration.py
[glue-fixed] zz-scripts/chapter01/generate_data_chapter01.py
[glue-fixed] zz-scripts/chapter01/plot_fig01_early_plateau.py
[glue-fixed] zz-scripts/chapter04/generate_data_chapter04.py
[glue-fixed] zz-scripts/chapter04/plot_fig04_relative_deviations.py
[glue-fixed] zz-scripts/chapter04/plot_fig01_invariants_schematic.py
[glue-fixed] zz-scripts/chapter04/plot_fig02_invariants_histogram.py
[glue-fixed] zz-scripts/chapter04/plot_fig03_invariants_vs_T.py
[glue-fixed] zz-scripts/manifest_tools/verify_manifest.py
[glue-fixed] zz-scripts/manifest_tools/populate_manifest.py
[glue-fixed] zz-scripts/_common/__init__.py
[glue-fixed] zz-scripts/_common/style.py
[glue-fixed] zz-scripts/_common/cli.py
[glue-fixed] zz-scripts/_common/postparse.py
[glue-fixed] zz-scripts/chapter08/generate_coupling_milestones.py
[glue-fixed] zz-scripts/chapter08/plot_fig01_chi2_total_vs_q0.py
[glue-fixed] zz-scripts/chapter08/plot_fig03_mu_vs_z.py
[glue-fixed] zz-scripts/chapter08/plot_fig05_residuals.py
[glue-fixed] zz-scripts/chapter08/generate_data_chapter08.py
[glue-fixed] zz-scripts/chapter08/plot_fig07_chi2_profile.py
[glue-fixed] zz-scripts/chapter08/plot_fig02_dv_vs_z.py
[glue-fixed] zz-scripts/chapter08/plot_fig04_chi2_heatmap.py
[glue-fixed] zz-scripts/chapter08/plot_fig06_normalized_residuals_distribution.py
[glue-fixed] zz-scripts/chapter07/tests/test_chapter07.py
[glue-fixed] zz-scripts/chapter07/utils/toy_model.py
[glue-fixed] zz-scripts/chapter07/utils/test_kgrid.py
[glue-fixed] zz-scripts/chapter03/utils/convert_milestones.py
[glue-fixed] zz-scripts/chapter08/utils/generate_coupling_milestones.py
[glue-fixed] zz-scripts/chapter08/utils/cosmo.py
[glue-fixed] zz-scripts/chapter08/utils/verify_z_grid.py
[glue-fixed] zz-scripts/chapter08/utils/coupling_example_model.py
[glue-fixed] zz-scripts/chapter08/utils/extract_bao_data.py
[glue-fixed] zz-scripts/chapter08/utils/extract_pantheon_plus_data.py
Done. Files changed: 108
[FAIL(1)] zz-scripts/chapter07/plot_fig04_dcs2_vs_k.py  ( 0.0s)
  File "/home/jplal/MCGT/zz-scripts/chapter07/plot_fig04_dcs2_vs_k.py", line 27
    .ArgumentParser(
    ^
SyntaxError: invalid syntax
--------------------------------------------------------------------------------
[FAIL(1)] zz-scripts/chapter10/plot_fig05_hist_cdf_metrics.py  ( 0.0s)
  File "/home/jplal/MCGT/zz-scripts/chapter10/plot_fig05_hist_cdf_metrics.py", line 27
    .ArgumentParser(
    ^
SyntaxError: invalid syntax
--------------------------------------------------------------------------------
[FAIL(1)] zz-scripts/chapter04/plot_fig02_invariants_histogram.py  ( 0.0s)
  File "/home/jplal/MCGT/zz-scripts/chapter04/plot_fig02_invariants_histogram.py", line 13
    _p = argparse.ArgumentParser(
IndentationError: unexpected indent
--------------------------------------------------------------------------------
[FAIL(1)] zz-scripts/chapter03/plot_fig01_fR_stability_domain.py  ( 0.0s)
  File "/home/jplal/MCGT/zz-scripts/chapter03/plot_fig01_fR_stability_domain.py", line 16
    args = p.parse_args()
           ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
--------------------------------------------------------------------------------
